<resources>
    <string name="app_name">TP1</string>
    <string name="usuario">Usuario</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="user">Usuario</string>
    <string name="password">Contrasena</string>
    <string name="enter">ENTRAR</string>
    <string name="checkIn">Registrarse</string>
    <string name="register">REGISTRAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="rpPassword">Repita contrasena</string>
    <string name="closeSession">CERRAR SESION</string>
    <string name="update">ACTUALIZAR</string>
    <string name="email">E-mail</string>
    <string name="userp">Usuario:</string>
    <string name="passwordp">Contrasena:</string>
    <string name="emailp">E-mail:</string>
</resources>
